--- a/branches/Gallery/Gallery/Gallery.Web/Index.htm
+++ b/branches/Gallery/Gallery/Gallery.Web/Index.htm
@@ -2,17 +2,48 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>无标题页</title>
+    <style type="text/css">
+        a
+        {
+            text-decoration: none;
+        }
+    </style>
+
+    <script language="javascript" src="Scripts/jquery-1.4.1.min.js"></script>
+
+    <script language="javascript">
+    var current = 's1';
+    function show() {
+        $('#' + current).fadeOut( 'slow', function() {
+            if ( current == 's1') {
+                current = 's2';
+            } else {
+                current = 's1';
+            }
+            $('#' + current) .fadeIn('slow');
+            //window.setTimeout(function();", 500);
+        });
+    }
+    $(document).ready(function(){
+        //var show = 
+        window.setInterval("show();", 3000);
+    });
+    </script>
+
 </head>
 <body text="#ffffff" vlink="#000000" alink="#000000" link="#0000ff" bgcolor="#000000">
     <p align="center">
-        &nbsp;<img height="201" src="http://www.dxdphotography.com/Dxd_logosplash.png" width="399"
-            border="0" /><br />
-        &nbsp;&nbsp;<a href="http://www.dxdphotography.com/Home.html"><img height="347" src="http://www.dxdphotography.com/cc-%20April%20564_splash.jpg"
-            width="372" border="2" /></a></p>
+        &nbsp;<img height="201" src="Images/Dxd_logosplash.png" width="399" border="0" /><br />
+        &nbsp;&nbsp;<a href="Home.html">
+            <img id="s1" height="347" src="Images/splash1.jpg" width="372" style="border: none;" alt="Enter Site"
+                title="Enter Site" />
+            <img id="s2" height="284" src="Images/splash2.jpg" width="224" style="border: none;display:none;" alt="Enter Site"
+                title="Enter Site" />
+        </a>
+    </p>
     <p align="center">
-        <font face="Baskerville Old Face">Please click photo to enter</font><br />
-        <img height="85" src="http://www.dxdphotography.com/CatchLine%20copy.png" width="955"
-            border="0" /><br />
+        <!--<font face="Baskerville Old Face">Please click photo to enter</font><br />-->
+        <img height="85" src="Images/slogan.png" width="955" border="0" /><br />
         &nbsp;<span style="font-size: 16pt">Contact: </span><a href="mailto:Donna@DxDPhotography.com">
             <span style="font-size: 16pt">Donna@DxDPhotography.com</span></a></p>
 </body>
