--- a/branches/Gallery/Gallery/Gallery.Web/Work.htm
+++ b/branches/Gallery/Gallery/Gallery.Web/Work.htm
@@ -6,7 +6,18 @@
     <script language="javascript" src="scripts/jquery-1.4.1.min.js" type="text/javascript"></script>
 
     <script language="javascript" src="scripts/index.js" type="text/javascript"></script>
-
+    <script language="javascript" src="scripts/gallery.js" type="text/javascript"></script>
+<style type="text/css">
+       .thumb
+       {
+           width:50px;
+           height:50px;
+           margin-left:18px;
+           margin-bottom:10px;
+           background-color:Yellow;
+           float:left;
+       }
+</style>
 </head>
 <body>
     <div id="container">
@@ -23,13 +34,34 @@
                 <li><a href="Contact.htm">Contact Us</a> </li>-->
             </ul>
         </div>
-        <div id="content">
+        <div id="content" style="width:717px;">
             <p style="visibility: visible" align="center">
-                <embed src="index.swf" width="700" height="600" type="application/x-shockwave-flash"></embed>
-                </EMBED><//EMBED></p>
+                <!--<embed src="index.swf" width="700" height="600" type="application/x-shockwave-flash"></embed>
+                </EMBED><//EMBED></p>-->
+                <div id="cp" style="width:150px;background-color:Red;height:400px;float:left;">
+                    <div>Top</div>
+                    <div>
+                        <div class="thumb"></div>
+                        <div class="thumb"></div>
+                        <div class="thumb"></div>
+                        <div class="thumb"></div>
+                        <div class="thumb"></div>
+                        <div class="thumb"></div>
+                        <div class="thumb"></div>
+                        <div class="thumb"></div>
+                        <div class="thumb"></div>
+                        <div class="thumb"></div>
+                        <div class="thumb"></div>
+                        <div class="thumb"></div>
+                        <div style="clear:both;"></div>
+                    </div>
+                    <div>Bottom</div>
+                </div>
+                <div style="float:left;margin-left:7px;width:560px;background-color:Yellow;height:550px;">afd</div>
+                <div style="clear:both;"></div>
             <p style="visibility: visible" align="center">
                 &nbsp;<br />
-                <font color="#ffffff">Copyright © 2009 DxD Photography. All rights reserved.</font></p>
+                <font color="#ffffff">Copyright © DxD Photography. All rights reserved.</font></p>
         </div>
     </div>
 </body>
