--- a/Gallery/Gallery.Web/Index.htm
+++ b/Gallery/Gallery.Web/Index.htm
@@ -35,9 +35,9 @@
     <p align="center">
         &nbsp;<img height="201" src="Images/Dxd_logosplash.png" width="399" border="0" /><br />
         &nbsp;&nbsp;<a href="Home.html">
-            <img id="s1" height="347" src="Images/splash1.jpg" width="372" style="border: none;" alt="Enter Site"
+            <img id="s1" height="347" src="Images/splash1.jpg" width="372" style="border: none;" alt="Click photo to enter"
                 title="Enter Site" />
-            <img id="s2" height="284" src="Images/splash2.jpg" width="224" style="border: none;display:none;" alt="Enter Site"
+            <img id="s2" height="284" src="Images/splash2.jpg" width="224" style="border: none;display:none;" alt="Click photo to enter"
                 title="Enter Site" />
         </a>
     </p>
