--- a/Gallery/Gallery.Web/Work.htm
+++ b/Gallery/Gallery.Web/Work.htm
@@ -3,23 +3,66 @@
 <head>
     <title>无标题页</title>
     <link href="Style.css" type="text/css" rel="Stylesheet" />
+
     <script language="javascript" src="scripts/jquery-1.4.1.min.js" type="text/javascript"></script>
 
     <script language="javascript" src="scripts/index.js" type="text/javascript"></script>
+
     <script language="javascript" src="scripts/gallery.js" type="text/javascript"></script>
-<style type="text/css">
-       .thumb
-       {
-           width:50px;
-           height:50px;
-           margin-left:18px;
-           margin-bottom:10px;
-           background-color:Yellow;
-           float:left;
-       }
-</style>
+
+    <style type="text/css">
+        .thumb
+        {
+            width: 50px;
+            height: 50px;
+            margin-top: 0px;
+            margin-bottom: 10px;
+            margin-left: 18px;
+            float: left;
+            cursor: pointer;
+        }
+        .img_thumb
+        {
+            width: 50px;
+            height: 50px;
+            margin: 0;
+            border: none;
+        }
+        #outerContainer
+        {
+            width: 150px;
+            height: 360px;
+            overflow: hidden;
+            z-index: 10;
+            position: relative;
+        }
+        #Slide
+        {
+            position: relative;
+            top: 0px;
+            left: 0px;
+            z-index: 0;
+            overflow: hidden;
+        }
+        #cpBottom
+        {
+            text-align: center;
+            height: 25px;
+            line-height: 25px;
+        }
+        #cp a
+        {
+            color: #ffffff;
+            text-decoration: none;
+        }
+        #cpTop
+        {
+            height: 25px;
+            line-height: 25px;
+        }
+    </style>
 </head>
-<body>
+<body style="text-align: center;">
     <div id="container">
         <div id="header">
             <div id="header_text">
@@ -27,42 +70,32 @@
                     &nbsp;</p>
             </div>
             <ul id="Menu">
-                <!--<li><a href="Home.html">Home</a> </li>
-                <li><a href="About.htm">About Us</a> </li>
-                <li><a href="Services.htm">Our Services</a> </li>
-                <li><a href="Work.htm">Our Work</a> </li>
-                <li><a href="Contact.htm">Contact Us</a> </li>-->
             </ul>
         </div>
-        <div id="content" style="width:717px;">
-            <p style="visibility: visible" align="center">
-                <!--<embed src="index.swf" width="700" height="600" type="application/x-shockwave-flash"></embed>
-                </EMBED><//EMBED></p>-->
-                <div id="cp" style="width:150px;background-color:Red;height:400px;float:left;">
-                    <div>Top</div>
-                    <div>
-                        <div class="thumb"></div>
-                        <div class="thumb"></div>
-                        <div class="thumb"></div>
-                        <div class="thumb"></div>
-                        <div class="thumb"></div>
-                        <div class="thumb"></div>
-                        <div class="thumb"></div>
-                        <div class="thumb"></div>
-                        <div class="thumb"></div>
-                        <div class="thumb"></div>
-                        <div class="thumb"></div>
-                        <div class="thumb"></div>
-                        <div style="clear:both;"></div>
-                    </div>
-                    <div>Bottom</div>
+    </div>
+    <div id="content" style="width: 717px; text-align: center; margin: 0 auto;">
+        <div id="cp" style="width: 148px; border: solid 1px silver; height: 440px; float: left;">
+            <div id="cpTop">
+                <a href="javascript:void(0);" title="Play" onclick="Play();">►</a>
+                 <a href="javascript:void(0);" title="Stop" onclick="Stop();"> ◙ </a>
+            </div>
+            <div id="outerContainer">
+                <div id="Slide">
                 </div>
-                <div style="float:left;margin-left:7px;width:560px;background-color:Yellow;height:550px;">afd</div>
-                <div style="clear:both;"></div>
-            <p style="visibility: visible" align="center">
-                &nbsp;<br />
-                <font color="#ffffff">Copyright © DxD Photography. All rights reserved.</font></p>
+            </div>
+            <div id="cpBottom">
+                <a href="javascript:void(0);" onclick="Up();" title="Page Up">▲</a> <a href="javascript:void(0);"
+                    onclick="Down();" title="Page Down">▼</a>
+            </div>
         </div>
+        <div style="float: left; margin-left: 7px; width: 560px; background-color: Yellow;
+            height: 550px;" id="imgHolder">
+        </div>
+        <div style="clear: both;">
+        </div>
+        <p style="visibility: visible" align="center">
+            &nbsp;<br />
+            <font color="#ffffff">Copyright © DxD Photography. All rights reserved.</font></p>
     </div>
 </body>
 </html>
