--- a/branches/Gallery/Gallery/Gallery.Web/Work.htm
+++ b/branches/Gallery/Gallery/Gallery.Web/Work.htm
@@ -88,7 +88,7 @@
                     onclick="Down();" title="Page Down">▼</a>
             </div>
         </div>
-        <div style="float: left; margin-left: 7px; width: 560px; background-color: Yellow;
+        <div style="float: left; margin-left: 7px; width: 560px;margin-top:20px;
             height: 550px;" id="imgHolder">
         </div>
         <div style="clear: both;">
