--- a/branches/Gallery/Gallery/Gallery.Web/Contact.htm
+++ b/branches/Gallery/Gallery/Gallery.Web/Contact.htm
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>无标题页</title>
+    <title>DxD Photography - Specializing in Equine Photography</title>
     <link href="Style.css" type="text/css" rel="Stylesheet" />
     <script language="javascript" src="scripts/jquery-1.4.1.min.js" type="text/javascript"></script>
 
@@ -16,11 +16,7 @@
                     &nbsp;</p>
             </div>
             <ul id="Menu">
-                <!--<li><a href="Home.html">Home</a> </li>
-                <li><a href="About.htm">About Us</a> </li>
-                <li><a href="Services.htm">Our Services</a> </li>
-                <li><a href="Work.htm">Our Work</a> </li>
-                <li><a href="Contact.htm">Contact Us</a> </li>-->
+                
             </ul>
         </div>
         <div id="content">
@@ -40,14 +36,14 @@
             <div id="right">
                 <p>
                     <br />
-                    <img height="336" src="http://www.dxdphotography.com/c-IMG_0164_resize.jpg" width="224"
+                    <img height="336" src="images/c-IMG_0164_resize.jpg" width="224"
                         border="0" />
                 </p>
             </div>
         </div>
         <div id="footer">
             <p align="center">
-                <font color="#ffffff">Copyright © 2009 DxD Photography. All rights reserved.</font></p>
+                <font color="#ffffff">Copyright © DxD Photography. All rights reserved.</font></p>
         </div>
     </div>
 </body>
