--- a/branches/Gallery/Gallery/Gallery.Web/home.html
+++ b/branches/Gallery/Gallery/Gallery.Web/home.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>无标题页</title>
+    <title>DxD Photography - Specializing in Equine Photography</title>
     <link href="Style.css" type="text/css" rel="Stylesheet" />
 
     <script language="javascript" src="scripts/jquery-1.4.1.min.js" type="text/javascript"></script>
@@ -17,18 +17,13 @@
                     &nbsp;</p>
             </div>
             <ul id="Menu">
-                <!--<li><a href="Home.html">Home</a> </li>
-                <li><a href="About.htm">About Us</a> </li>
-                <li><a href="Services.htm">Our Services</a> </li>
-                <li><a href="Work.htm">Our Work</a> </li>
-                <li><a href="Contact.htm">Contact Us</a> </li>-->
             </ul>
         </div>
         <div id="content">
             <div id="left">
                 <h1>
-                    <font color="#ffffff">Welcome to DxD Photography!</font><br />
-                    <br />
+                    <!--<font color="#ffffff">Welcome to DxD Photography!</font><br />
+                    <br />-->
                     <span style="font-size: 12pt; font-family: 'DejaVu Serif'"><font face="Tahoma" color="#ffffff">
                         Photographic images give us a lasting record of the parts of our lives that we most
                         want to preserve.</font></span><span style="font-size: 12pt; mso-spacerun: yes"><font
@@ -62,13 +57,13 @@
             <div id="right">
                 <p>
                     <br />
-                    <img height="284" src="http://www.dxdphotography.com/c1a-IMG_0098_resize.jpg" width="224"
+                    <img height="284" src="Images/c1a-IMG_0098_resize.jpg" width="224"
                         border="0" />
                 </p>
             </div>
         </div>
         <div id="footer">
-            <font color="#ffffff">Copyright © 2009 DxD Photography. All rights reserved.</font></div>
+            <font color="#ffffff">Copyright © DxD Photography. All rights reserved.</font></div>
     </div>
 </body>
 </html>
