--- a/branches/Gallery/Gallery/Gallery.Web/Work.htm
+++ b/branches/Gallery/Gallery/Gallery.Web/Work.htm
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>DxD Photography - Specializing in Equine Photography</title>
+    <meta name="keywords" content="Equine photography, Pet photography, Pet portraits" />
     <link href="Style.css" type="text/css" rel="Stylesheet" />
 
     <script language="javascript" src="scripts/jquery-1.4.1.min.js" type="text/javascript"></script>
