--- a/Gallery/Gallery.Web/Index.htm
+++ b/Gallery/Gallery.Web/Index.htm
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>无标题页</title>
+    <title>DxD Photography - Specializing in Equine Photography</title>
+    <meta name="keywords" content="Equine photography, Pet photography, Pet portraits" />
     <style type="text/css">
         a
         {
