--- a/branches/Gallery/Gallery/Gallery.Web/Index.htm
+++ b/branches/Gallery/Gallery/Gallery.Web/Index.htm
@@ -33,6 +33,18 @@
 
 </head>
 <body text="#ffffff" vlink="#000000" alink="#000000" link="#0000ff" bgcolor="#000000">
+<div style="width:100%">
+    <!--<div style="margin:0 auto;width:717px;">
+    
+     <img height="201" src="Images/Dxd_logosplash.png" width="399" border="0" /><br />
+        &nbsp;&nbsp;<a href="Home.html">
+            <img id="Img1" height="347" src="Images/splash1.jpg" width="372" style="border: none;" alt="Click photo to enter"
+                title="Enter Site" />
+            <img id="Img2" height="284" src="Images/splash2.jpg" width="224" style="border: none;display:none;" alt="Click photo to enter"
+                title="Enter Site" />
+        </a>
+        
+        </div></div>-->
     <p align="center">
         &nbsp;<img height="201" src="Images/Dxd_logosplash.png" width="399" border="0" /><br />
         &nbsp;&nbsp;<a href="Home.html">
@@ -44,7 +56,9 @@
     </p>
     <p align="center">
         <!--<font face="Baskerville Old Face">Please click photo to enter</font><br />-->
-        <img height="85" src="Images/slogan.png" width="955" border="0" /><br />
+        <img height="85" src="Images/slogan.png" width="955" border="0" />
+        <!--<div style="margin:0 auto;width:955px;height:85px;line-height:85px;color:Silver;font-size:26pt;">Equine and Pet Portraits and Event Photography</div>-->
+        <br />
         &nbsp;<span style="font-size: 16pt">Contact: </span><a href="mailto:Donna@DxDPhotography.com">
             <span style="font-size: 16pt">Donna@DxDPhotography.com</span></a></p>
 </body>
