--- a/branches/Gallery/Gallery/Gallery.Web/Index.htm
+++ b/branches/Gallery/Gallery/Gallery.Web/Index.htm
@@ -54,12 +54,14 @@
                 title="Enter Site" />
         </a>
     </p>
-    <p align="center">
+    <!--<p align="center">
         <!--<font face="Baskerville Old Face">Please click photo to enter</font><br />-->
         <img height="85" src="Images/slogan.png" width="955" border="0" />
+        <img height="85" src="Images/DxdSlogan.gif" width="955" border="0" />
+        
         <!--<div style="margin:0 auto;width:955px;height:85px;line-height:85px;color:Silver;font-size:26pt;">Equine and Pet Portraits and Event Photography</div>-->
         <br />
         &nbsp;<span style="font-size: 16pt">Contact: </span><a href="mailto:Donna@DxDPhotography.com">
-            <span style="font-size: 16pt">Donna@DxDPhotography.com</span></a></p>
+            <span style="font-size: 16pt">Donna@DxDPhotography.com</span></a></p>-->
 </body>
 </html>
