--- a/Gallery/Gallery.Web/home.html
+++ b/Gallery/Gallery.Web/home.html
@@ -22,46 +22,33 @@
         </div>
         <div id="content">
             <div id="left">
-                <h1>
-                    <!--<font color="#ffffff">Welcome to DxD Photography!</font><br />
-                    <br />-->
-                    <span style="font-size: 12pt; font-family: 'DejaVu Serif'"><font face="Tahoma" color="#ffffff">
-                        Photographic images give us a lasting record of the parts of our lives that we most
-                        want to preserve.</font></span><span style="font-size: 12pt; mso-spacerun: yes"><font
-                            face="Tahoma" color="#ffffff">&nbsp; </font></span><span style="font-size: 12pt;
-                                font-family: 'DejaVu Serif'"><font face="Tahoma" color="#ffffff">At DxD Photography,
-                                    we have the skills and experience to provide you with a unique array of images that
-                                    is tailored to you and your horse or pet.</font></span><span style="font-size: 12pt;
-                                        mso-spacerun: yes"><font face="Tahoma" color="#ffffff">&nbsp; </font>
-                    </span><span style="font-size: 12pt; font-family: 'DejaVu Serif'"><font face="Tahoma"
-                        color="#ffffff">No two photography sessions are ever alike, and we are always open
-                        to any suggestions or ideas you may wish to offer to ensure you have the treasured
-                        essence of your horse or pet captured forever.</font></span><span style="font-size: 12pt;
-                            font-family: Tahoma"><font face="Tahoma" color="#ffffff">
-                                <br />
-                                <br />
-                            </font></span><span style="font-size: 12pt; font-family: 'DejaVu Serif'"><font face="Tahoma"
-                                color="#ffffff">In addition to Equine Photography, DxD Photography brings the same
-                                care and attention to portraiture of any pet or pet owner. Our Gallery photographs
-                                are available for sale in various sizes. If you are interested in purchasing a use
-                                license for any of the Gallery images, please use the contact page to inquire.</font></span><span
-                                    style="font-size: 12pt; font-family: Tahoma"><font face="Tahoma" color="#ffffff"><br />
-                                        <br />
-                                        Our photography services are provided primarily in Southern California.<br />
-                                        <br />
-                                        Thank you for visiting the </font><b><font face="Tahoma" color="#ffffff">DxD Photography</font></b><font
-                                            face="Tahoma" color="#ffffff"> website.</font></span><span style="font-size: 12pt;
-                                                mso-spacerun: yes"><font face="Tahoma" color="#ffffff">&nbsp; </font>
-                    </span><span style="font-size: 12pt; font-family: Tahoma"><font face="Tahoma" color="#ffffff">
-                        We hope you enjoy the images.</font></span></h1>
+                <div class="Paragraph">
+                    Photographic images give us a lasting record of the parts of our lives that we most
+                    want to preserve. At DxD Photography, we have the skills and experience to provide
+                    you with a unique array of images that is tailored to you and your horse or pet.
+                    No two photography sessions are ever alike, and we are always open to any suggestions
+                    or ideas you may wish to offer to ensure you have the treasured essence of your
+                    horse or pet captured forever.
+                </div>
+                <div class="Paragraph">
+                    Our Gallery Photographs are available for sale in various sizes. If you are interested
+                    in purchasing a use license for any of the Gallery images, please use the contact
+                    page to inquire.
+                </div>
+                <div class="Paragraph">
+                    Our photography services are provided primarily in Southern California.
+                </div>
+                <div class="Paragraph">
+                    Thank you for visiting the DxD Photography website. We hope you enjoy the images.
+                </div>
             </div>
             <div id="right">
                 <p>
                     <br />
-                    <img height="284" src="Images/c1a-IMG_0098_resize.jpg" width="224"
-                        border="0" />
+                    <img height="284" src="Images/c1a-IMG_0098_resize.jpg" width="224" border="0" />
                 </p>
             </div>
+            <div style="clear:both;"></div>
         </div>
         <div id="footer">
             <font color="#ffffff">Copyright © DxD Photography. All rights reserved.</font></div>
