--- a/Gallery/Gallery.Web/Index.htm
+++ b/Gallery/Gallery.Web/Index.htm
@@ -40,7 +40,7 @@
             <div>
                 <img height="201" src="Images/Dxd_logosplash.png" width="399" border="0" alt="DxD Photography" />
             </div>
-            <div style="margin-top: 5px;">
+            <div style="margin-top: 5px;height:347px;">
                 <a href="Home.html" style="margin-top: 20px;">
                     <img id="s1" height="347px" src="Images/splash1.jpg" style="border: none;" alt="Click photo to enter"
                         title="Click photo to enter" />
