--- a/branches/Gallery/Gallery/Gallery.Web/home.html
+++ b/branches/Gallery/Gallery/Gallery.Web/home.html
@@ -45,7 +45,7 @@
             <div id="right">
                 <p>
                     <br />
-                    <img height="284" src="Images/c1a-IMG_0098_resize.jpg" width="224" border="0" />
+                    <img height="284" src="Images/homepage.jpg" width="224" border="0" />
                 </p>
             </div>
             <div style="clear:both;"></div>
