--- a/Gallery/Gallery.Web/About.htm
+++ b/Gallery/Gallery.Web/About.htm
@@ -22,7 +22,7 @@
             </div>
             <div id="content">
                 <div id="left">
-                <div class="Paragraph">My name is Donna Delikat and I am the owner and principal photographer of DxD Photography.  I specialize in all aspects of equine and pet photography, including equine and pet portraits, competition and action (with or without a rider).  If you have something special in mind, please call us.  It is likely that we can accommodate your request.
+                <div class="Paragraph">My name is Donna Delikat and I am the owner and principal photographer of <span style="font-weight:900;">DxD Photography</span>.  I specialize in all aspects of equine and pet photography, including equine and pet portraits, competition and action (with or without a rider).  If you have something special in mind, please call us.  It is likely that we can accommodate your request.
                 </div>
                 <div class="Paragraph">I love photography and I love animals.  My work is more than just being a photographer.  It is about combining two passions into a career that allows me to be creative and provide beautiful images for my clients to love and enjoy for many years. </div>
                 
