--- a/Gallery/Gallery.Web/Contact.htm
+++ b/Gallery/Gallery.Web/Contact.htm
@@ -21,18 +21,21 @@
             </ul>
         </div>
         <div id="content">
-            <div id="left">
+            <div id="left" style="font-family: Verdana; color: #ffffff">
                 <h1>
-                    <font color="#ffffff">Contact Us</font><br />
+                    <font color="#ffffff">Contact Us</font>
                     <br />
-                    <span style="font-size: 12pt; font-family: 'DejaVu Serif'"><font face="Tahoma" color="#666666">
-                        Photographs by Donna Delikat<br />
+                    <br />
+                    <!--<span style="font-size: 12pt; font-family: 'DejaVu Serif'">-->
+                    <font face="verdana" color="#ffffff"> Photographs by Donna Delikat<br />
                         858.336.6016 &nbsp;&nbsp;&nbsp;<br />
                         <br />
                         Contact: </font><a href="mailto:Donna@DxDPhotography.com"><font face="Tahoma" color="#ffffff">
-                            donna@dxdphotography.com</font></a><font face="Tahoma" color="#666666"><br />
+                            donna@dxdphotography.com</font></a><font face="Verdana" color="#ffffff"><br />
                                 <br />
-                                Call or Email for an Appointment</font></span></h1>
+                                Call or Email for an Appointment</font>
+                    <!-- </span>-->
+                </h1>
             </div>
             <div id="right">
                 <p>
