--- a/Gallery/Gallery.Web/Contact.htm
+++ b/Gallery/Gallery.Web/Contact.htm
@@ -28,7 +28,7 @@
                     <br />
                     <!--<span style="font-size: 12pt; font-family: 'DejaVu Serif'">-->
                     <font face="verdana" color="#ffffff"> Photographs by Donna Delikat<br />
-                        858.336.6016 &nbsp;&nbsp;&nbsp;<br />
+                        <span style="text-decoration:underline;">858.336.6016</span> &nbsp;&nbsp;&nbsp;<br />
                         <br />
                         Contact: </font><a href="mailto:Donna@DxDPhotography.com"><font face="Tahoma" color="#ffffff">
                             donna@dxdphotography.com</font></a><font face="Verdana" color="#ffffff"><br />
